
      \item Add \code{utils::strcapture()}. Given a character vector and
      a regular expression containing capture expressions,
      \code{strcapture()} will extract the captured tokens into a
      tabular data structure, typically a data.frame.

      \item \code{str()} and \code{strOptions()} get a new option
      \code{drop.deparse.attr} with improved but \emph{changed} default
      behaviour for expressions.% plan: backport to 3.3.1

      \item \code{isSymmetric(m)} is much faster for large asymmetric
      matrices \code{m} via pre-tests and a new option \code{tol1}
      (with which strict back compatibility is possible but not the
      default).% plan: backport

      \item The result of \code{eigen()} now is of class \code{"eigen"}
      in the default case when eigenvectors are computed.

      \item Zero-length date and datetime objects (\code{"POSIX[cl]?t"})
      now \code{print()} \dQuote{recognizably}.

      \item \code{xy.coords()} and \code{xyz.coords()} get new
      \code{setLab} option.

      \item \code{sort.list()}, \code{order()} and \code{sort.int()}
      \code{method} argument gains an \code{"auto"} option (the default)
      which should behave the same as before when \code{method} was left
      missing.

      \item \code{stopifnot(E, ..)} now reports differences when
      \code{E} is a call to \code{all.equal()} and that is not true.

      \item \code{boxplot(<formula>, *)} gets optional arguments
      \code{drop}, \code{sep}, and \code{lex.order} to pass to
      \code{split.default()} which itself newly gets \code{lex.order} to
      pass to \code{interaction()} for more flexibility.

      \item The \code{plot} method for \code{ppr} got enhanced default
      labels (xmin and main).

      \item \code{sample.int()} got an explicit \code{useHash} option
      (with a back compatible default).
    }
  }
  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{