@@ -34,7 +34,9 @@
 
       \item \code{str()} and \code{strOptions()} get a new option
       \code{drop.deparse.attr} with improved but \emph{changed} default
-      behaviour for expressions.% plan: backport to 3.3.1
+      behaviour for expressions.  For \code{expression} objects
+      \code{x}, \code{str(x)} now may remove extraneous white space and
+      truncate long lines.% plan: backport to 3.3.1
 
       \item \code{isSymmetric(m)} is much faster for large asymmetric
       matrices \code{m} via pre-tests and a new option \code{tol1}
